--- a/index.html
+++ b/index.html
@@ -118,6 +118,18 @@ animation:drift 80s linear infinite
 from{background-position:0 0,0 0,0 0}
 to{background-position:800px 400px,-600px 300px,400px -700px}
 }
+/* Stop drifting particles (no moving tint) */
+.leaflet-container::after { animation: none !important; }
+
+/* Ensure markers are ABOVE tint/glow overlays */
+.leaflet-overlay-pane { z-index: 250 !important; }
+.leaflet-marker-pane  { z-index: 650 !important; }
+.leaflet-popup-pane   { z-index: 700 !important; }
+
+/* Lower overlay z-index so it sits between tiles and markers */
+#map::before { z-index: 240 !important; }
+#map::after  { z-index: 241 !important; }
+.leaflet-container::after { z-index: 242 !important; }
 </style>
 </head>
 
