--- a/index.html
+++ b/index.html
@@ -25,65 +25,44 @@ color:#f7f2e7;
 padding:12px 14px;
 border-radius:14px;
 box-shadow:0 10px 35px rgba(0,0,0,.35);
-border:1px solid rgba(211,163,74,.35)
+border:1px solid rgba(211,163,74,.35);
 }
-.muted{color:rgba(247,242,231,.75);font-size:13px}
+
 .row{margin-top:8px;display:flex;flex-wrap:wrap;gap:8px}
-.badge{
-padding:2px 8px;
-border-radius:999px;
-background:rgba(211,163,74,.18);
-color:#d3a34a;
-font-size:12px;
-margin-left:6px
-}
+.muted{color:#ddd;font-size:13px}
+
 button{
-background:#d3a34a;
-color:#0b0b0b;
+background:#d4af37;
+color:#000;
 border:none;
 padding:8px 10px;
 border-radius:10px;
+font-weight:800;
 cursor:pointer;
-font-weight:800
 }
+
 button.secondary{
-background:rgba(211,163,74,.18);
-color:#f7f2e7;
-border:1px solid rgba(211,163,74,.35)
+background:rgba(212,175,55,.15);
+color:#fff;
+border:1px solid rgba(212,175,55,.35);
 }
+
 button:disabled{opacity:.5}
 
-/* marker glow */
-@keyframes pulse{
-0%{filter:drop-shadow(0 0 0 rgba(212,175,55,0))}
-50%{filter:drop-shadow(0 0 14px rgba(212,175,55,.9))}
-100%{filter:drop-shadow(0 0 0 rgba(212,175,55,0))}
-}
-.nearest-glow{animation:pulse 1.4s infinite}
-.gold-route{filter:drop-shadow(0 0 6px rgba(212,175,55,.7))}
-
-/* ================= MAP EFFECT ================= */
-
+/* map color */
 .leaflet-tile{
-filter:
-brightness(1.3)
-contrast(1.15)
-saturate(.9)
-hue-rotate(205deg);
+filter:brightness(1.28) contrast(1.1) saturate(.9) hue-rotate(205deg)
 }
 
-.leaflet-pane{z-index:200}
-
-/* navy tone */
+/* tint overlay */
 #map::before{
 content:"";
 position:absolute;
 inset:0;
-pointer-events:none;
-z-index:300;
 background:#020035;
 opacity:.22;
-mix-blend-mode:multiply;
+pointer-events:none;
+z-index:240;
 }
 
 /* glow */
@@ -92,7 +71,7 @@ content:"";
 position:absolute;
 inset:0;
 pointer-events:none;
-z-index:301;
+z-index:241;
 background:
 radial-gradient(circle at 40% 60%,rgba(0,140,255,.18),transparent 60%),
 radial-gradient(circle at 70% 30%,rgba(0,110,255,.16),transparent 65%),
@@ -100,61 +79,85 @@ radial-gradient(circle at 30% 80%,rgba(0,160,255,.14),transparent 70%);
 mix-blend-mode:screen;
 }
 
-/* particles */
-.leaflet-container::after{
-content:"";
-position:absolute;
+/* ensure markers above tint */
+.leaflet-overlay-pane{z-index:250!important}
+.leaflet-marker-pane{z-index:650!important}
+.leaflet-popup-pane{z-index:700!important}
+
+/* crawl numbers */
+.stop-badge{
+background:#000;
+color:#fff;
+border:2px solid #D4AF37;
+border-radius:999px;
+width:26px;height:26px;
+display:grid;
+place-items:center;
+font-weight:900;
+}
+
+/* wheel modal */
+.overlay{
+position:fixed;
 inset:0;
-pointer-events:none;
-z-index:302;
-background-image:
-radial-gradient(circle,rgba(120,170,255,.35)1px,transparent 2px),
-radial-gradient(circle,rgba(60,120,255,.25)1px,transparent 2px),
-radial-gradient(circle,rgba(200,220,255,.18)1px,transparent 2px);
-background-size:120px 120px,180px 180px,260px 260px;
-animation:drift 80s linear infinite
+background:rgba(0,0,0,.7);
+display:none;
+align-items:center;
+justify-content:center;
+z-index:2000;
+padding:10px;
 }
-@keyframes drift{
-from{background-position:0 0,0 0,0 0}
-to{background-position:800px 400px,-600px 300px,400px -700px}
+
+.modal{
+width:100%;
+max-width:700px;
+background:#0b0b0b;
+color:#fff;
+border-radius:16px;
+padding:14px;
+border:1px solid rgba(212,175,55,.4);
 }
-/* Stop drifting particles (no moving tint) */
-.leaflet-container::after { animation: none !important; }
 
-/* Ensure markers are ABOVE tint/glow overlays */
-.leaflet-overlay-pane { z-index: 250 !important; }
-.leaflet-marker-pane  { z-index: 650 !important; }
-.leaflet-popup-pane   { z-index: 700 !important; }
-
-/* Lower overlay z-index so it sits between tiles and markers */
-#map::before { z-index: 240 !important; }
-#map::after  { z-index: 241 !important; }
-.leaflet-container::after { z-index: 242 !important; }
+.wheelWrap{border-radius:16px;overflow:hidden}
 </style>
 </head>
-
 <body>
+
 <div id="map"></div>
 
 <div class="panel">
 <strong>Guinness in Reykjavík</strong>
-<span class="badge">Wheel + Crawl + Heat</span>
-
-<div class="muted">
-Locate yourself → nearest pint, spin wheel, crawl, or heatmap.
-</div>
 
 <div class="row">
 <button id="locateBtn">Locate me</button>
 <button id="nearestBtn" disabled>Nearest</button>
 <button id="spinBtn" class="secondary">Wheel</button>
-<button id="crawlBtn" class="secondary">Crawl</button>
-<button id="heatBtn" class="secondary">Heat</button>
+<button id="crawlBtn" class="secondary">Pub crawl</button>
+<button id="heatBtn" class="secondary">Heatmap</button>
 <button id="clearBtn" class="secondary">Clear</button>
 </div>
 
 <div class="row muted" id="status">
-Tip: allow location for directions.
+Locate yourself and choose an option.
+</div>
+</div>
+
+<!-- wheel -->
+<div class="overlay" id="wheelOverlay">
+<div class="modal">
+<h3>Spin the wheel 🍺</h3>
+
+<div class="wheelWrap">
+<canvas id="wheelCanvas" width="320" height="320" style="width:100%"></canvas>
+</div>
+
+<div class="row">
+<button id="wheelSpinBtn">Spin</button>
+<button id="letsGoBtn" disabled>Let’s go!</button>
+<button id="wheelCloseBtn" class="secondary">Close</button>
+</div>
+
+<div id="wheelResult">Result: —</div>
 </div>
 </div>
 
@@ -162,83 +165,393 @@ Tip: allow location for directions.
 <script src="https://unpkg.com/leaflet.heat@0.2.0/dist/leaflet-heat.js"></script>
 
 <script>
+
+/* =========================
+PLACES
+========================= */
+
 const places=[
+{name:"Bjórgarðurinn",lat:64.1443921,lng:-21.9095837},
+{name:"Tivoli Bar",lat:64.1481387,lng:-21.939663},
+{name:"Irishman Pub",lat:64.14606,lng:-21.9288},
+{name:"English Pub",lat:64.14756,lng:-21.93919},
+{name:"American Bar",lat:64.1477377,lng:-21.9400835},
+{name:"Den Danske Kro",lat:64.14638,lng:-21.93366},
+{name:"Kaffibarinn",lat:64.1459583,lng:-21.931325},
+{name:"Bastard",lat:64.14567,lng:-21.930754},
+{name:"Drunk Rabbit",lat:64.147979,lng:-21.94029},
+{name:"Veður",lat:64.14554,lng:-21.92923},
 {name:"Ölstofan",lat:64.14561,lng:-21.93103},
 {name:"Litli Dubliner",lat:64.14517,lng:-21.92462},
 {name:"The Dubliner",lat:64.14864,lng:-21.94028},
-{name:"Kaffibarinn",lat:64.1459583,lng:-21.931325},
-{name:"Bastard",lat:64.14567,lng:-21.930754},
-{name:"English Pub",lat:64.14756,lng:-21.93919}
+{name:"Poolstofan",lat:64.13896,lng:-21.89054}
 ];
+
+/* =========================
+MAP
+========================= */
 
 const map=L.map("map").setView([64.1466,-21.9426],13);
 
 L.tileLayer(
-"https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png",
-{maxZoom:19}).addTo(map);
+"https://cartodb-basemaps-{s}.global.ssl.fastly.net/dark_all/{z}/{x}/{y}.png"
+).addTo(map);
 
+const markersLayer=L.layerGroup().addTo(map);
+const routeLayer=L.layerGroup().addTo(map);
+const crawlLayer=L.layerGroup().addTo(map);
+let heatLayer=null;
+
+/* icon */
 const icon=L.icon({
 iconUrl:"./guinness.png",
-iconSize:[44,44],
-iconAnchor:[22,44]
+iconSize:[42,42],
+iconAnchor:[21,42]
 });
 
-const layer=L.layerGroup().addTo(map);
-const route=L.layerGroup().addTo(map);
+const markerRefs=new Map();
+
+places.forEach(p=>{
+const m=L.marker([p.lat,p.lng],{icon}).addTo(markersLayer)
+.bindPopup(`<b>${p.name}</b><br>
+<a target=_blank href="https://www.google.com/maps/dir/?api=1&destination=${p.lat},${p.lng}&travelmode=walking">Directions</a>`);
+markerRefs.set(p.name,m);
+});
+
+/* =========================
+LOCATE
+========================= */
 
 let user=null;
-let heat=null;
 
-function draw(){
-layer.clearLayers();
-places.forEach(p=>{
-const m=L.marker([p.lat,p.lng],{icon}).addTo(layer);
-m.bindPopup(`<b>${p.name}</b><br>
-<a target=_blank href="https://maps.google.com/?daddr=${p.lat},${p.lng}">Directions</a>`);
-});
-}
-draw();
-
-function dist(a,b){
-const R=6371e3;
-const toRad=d=>d*Math.PI/180;
-const dLat=toRad(b.lat-a.lat);
-const dLng=toRad(b.lng-a.lng);
-const x=Math.sin(dLat/2)**2+
-Math.cos(toRad(a.lat))*Math.cos(toRad(b.lat))*Math.sin(dLng/2)**2;
-return 2*R*Math.asin(Math.sqrt(x));
-}
-
-document.getElementById("locateBtn").onclick=()=>{
-navigator.geolocation.getCurrentPosition(p=>{
-user={lat:p.coords.latitude,lng:p.coords.longitude};
-L.circleMarker([user.lat,user.lng]).addTo(map);
-map.setView([user.lat,user.lng],15);
-document.getElementById("nearestBtn").disabled=false;
+locateBtn.onclick=()=>{
+navigator.geolocation.getCurrentPosition(pos=>{
+user=[pos.coords.latitude,pos.coords.longitude];
+L.circleMarker(user,{radius:8}).addTo(map);
+map.setView(user,15);
+nearestBtn.disabled=false;
 });
 };
 
-document.getElementById("nearestBtn").onclick=()=>{
+/* =========================
+NEAREST
+========================= */
+
+function dist(a,b){
+const R=6371e3;
+const dLat=(b.lat-a[0])*Math.PI/180;
+const dLng=(b.lng-a[1])*Math.PI/180;
+const lat1=a[0]*Math.PI/180;
+const lat2=b.lat*Math.PI/180;
+const x=Math.sin(dLat/2)**2+
+Math.cos(lat1)*Math.cos(lat2)*
+Math.sin(dLng/2)**2;
+return 2*R*Math.asin(Math.sqrt(x));
+}
+
+nearestBtn.onclick=()=>{
+routeLayer.clearLayers();
+
 let best=null;
 places.forEach(p=>{
 const d=dist(user,p);
 if(!best||d<best.d)best={p,d};
 });
-route.clearLayers();
-L.polyline([[user.lat,user.lng],[best.p.lat,best.p.lng]],
-{color:"#D4AF37",weight:6}).addTo(route);
+
+L.polyline([user,[best.p.lat,best.p.lng]],
+{color:"#D4AF37",weight:6}).addTo(routeLayer);
+
+map.fitBounds([[user[0],user[1]],[best.p.lat,best.p.lng]]);
 };
 
-document.getElementById("heatBtn").onclick=()=>{
-if(heat){map.removeLayer(heat);heat=null;return;}
-heat=L.heatLayer(places.map(p=>[p.lat,p.lng,.8]),{radius:35});
-heat.addTo(map);
+/* =========================
+CRAWL
+========================= */
+
+crawlBtn.onclick=()=>{
+crawlLayer.clearLayers();
+
+let list=[...places];
+let cur=user;
+let order=[];
+
+while(list.length){
+let best=list.reduce((a,b)=>
+dist(cur,b)<dist(cur,a)?b:a
+);
+order.push(best);
+list=list.filter(x=>x!==best);
+cur=[best.lat,best.lng];
+}
+
+const line=L.polyline(order.map(p=>[p.lat,p.lng]),
+{color:"#D4AF37"}).addTo(crawlLayer);
+
+order.forEach((p,i)=>{
+L.marker([p.lat,p.lng],{
+icon:L.divIcon({html:`<div class="stop-badge">${i+1}</div>`})
+}).addTo(crawlLayer);
+});
+
+map.fitBounds(line.getBounds());
 };
 
-document.getElementById("clearBtn").onclick=()=>{
-route.clearLayers();
-if(heat){map.removeLayer(heat);heat=null;}
+/* =========================
+HEATMAP
+========================= */
+
+heatBtn.onclick=()=>{
+if(heatLayer){map.removeLayer(heatLayer);heatLayer=null;return;}
+heatLayer=L.heatLayer(places.map(p=>[p.lat,p.lng,.8]),
+{radius:35}).addTo(map);
 };
+
+/* =========================
+CLEAR
+========================= */
+
+clearBtn.onclick=()=>{
+routeLayer.clearLayers();
+crawlLayer.clearLayers();
+if(heatLayer){map.removeLayer(heatLayer);heatLayer=null;}
+};
+
+
+
+/* =========================
+   WHEEL SYSTEM
+========================= */
+
+const wheelOverlay  = document.getElementById("wheelOverlay");
+const wheelCanvas   = document.getElementById("wheelCanvas");
+const wheelSpinBtn  = document.getElementById("wheelSpinBtn");
+const wheelCloseBtn = document.getElementById("wheelCloseBtn");
+const letsGoBtn     = document.getElementById("letsGoBtn");
+const wheelResult   = document.getElementById("wheelResult");
+const spinBtn       = document.getElementById("spinBtn");
+
+const wctx = wheelCanvas.getContext("2d");
+
+let wheelAngle = 0;
+let spinning = false;
+let chosenPlace = null;
+
+/* wheel colors */
+const W_CREAM = "#D8C29B";
+const W_BLACK = "#1F1F1F";
+const W_RED   = "#B0322D";
+const W_GOLD  = "#D4AF37";
+
+/* =========================
+   DRAW WHEEL
+========================= */
+
+function drawWheel(){
+  const cx = wheelCanvas.width/2;
+  const cy = wheelCanvas.height/2;
+  const rOuter = Math.min(cx,cy)-12;
+  const rHub = 46;
+
+  const n = places.length;
+  const slice = (Math.PI*2)/n;
+
+  wctx.clearRect(0,0,wheelCanvas.width,wheelCanvas.height);
+
+  /* rim */
+  wctx.beginPath();
+  wctx.arc(cx,cy,rOuter+6,0,Math.PI*2);
+  wctx.fillStyle="#141414";
+  wctx.fill();
+
+  wctx.beginPath();
+  wctx.arc(cx,cy,rOuter+2,0,Math.PI*2);
+  wctx.strokeStyle="rgba(216,194,155,.35)";
+  wctx.lineWidth=6;
+  wctx.stroke();
+
+  /* slices */
+  for(let i=0;i<n;i++){
+    const a0 = wheelAngle+i*slice;
+    const a1 = a0+slice;
+
+    const accent = (i%6===2);
+    const fill = accent ? W_RED : (i%2?W_BLACK:W_CREAM);
+
+    wctx.beginPath();
+    wctx.moveTo(cx,cy);
+    wctx.arc(cx,cy,rOuter,a0,a1);
+    wctx.closePath();
+    wctx.fillStyle=fill;
+    wctx.fill();
+
+    wctx.strokeStyle="rgba(0,0,0,.35)";
+    wctx.lineWidth=2;
+    wctx.stroke();
+
+    const mid=(a0+a1)/2;
+
+    wctx.save();
+    wctx.translate(cx,cy);
+    wctx.rotate(mid);
+
+    wctx.fillStyle=(fill===W_BLACK||fill===W_RED)?"#F4EFE6":"#222";
+    wctx.font="900 12px system-ui";
+    wctx.textAlign="right";
+    wctx.textBaseline="middle";
+
+    let text=places[i].name.toUpperCase();
+    if(text.length>20) text=text.slice(0,20)+"…";
+
+    wctx.fillText(text,rOuter-16,0);
+    wctx.restore();
+  }
+
+  /* pegs */
+  for(let i=0;i<n;i++){
+    const a = wheelAngle+i*slice;
+    const x = cx+Math.cos(a)*(rOuter+2);
+    const y = cy+Math.sin(a)*(rOuter+2);
+
+    wctx.beginPath();
+    wctx.arc(x,y,2.2,0,Math.PI*2);
+    wctx.fillStyle="#0b0b0b";
+    wctx.fill();
+  }
+
+  /* hub */
+  wctx.beginPath();
+  wctx.arc(cx,cy,rHub,0,Math.PI*2);
+  wctx.fillStyle="#0b0b0b";
+  wctx.fill();
+  wctx.strokeStyle=W_GOLD;
+  wctx.lineWidth=4;
+  wctx.stroke();
+
+  wctx.fillStyle=W_GOLD;
+  wctx.font="900 14px system-ui";
+  wctx.textAlign="center";
+  wctx.textBaseline="middle";
+  wctx.fillText("SPIN",cx,cy);
+
+  /* pointer */
+  wctx.beginPath();
+  wctx.moveTo(cx,cy-rOuter-6);
+  wctx.lineTo(cx-14,cy-rOuter+24);
+  wctx.lineTo(cx+14,cy-rOuter+24);
+  wctx.closePath();
+  wctx.fillStyle=W_GOLD;
+  wctx.fill();
+}
+
+/* =========================
+   PICK RESULT FROM ANGLE
+========================= */
+
+function pickIndex(angle){
+  const slice=(Math.PI*2)/places.length;
+  const pointer=(-Math.PI/2);
+
+  let a=(pointer-angle)%(Math.PI*2);
+  if(a<0)a+=Math.PI*2;
+  return Math.floor(a/slice);
+}
+
+/* =========================
+   SPIN LOGIC
+========================= */
+
+function spinWheel(){
+  if(spinning)return;
+  spinning=true;
+
+  letsGoBtn.disabled=true;
+  chosenPlace=null;
+  wheelResult.innerHTML="Result: —";
+
+  const total=7000;
+  const slow=3000;
+  const fast=total-slow;
+
+  const start=wheelAngle;
+  const targetIndex=Math.floor(Math.random()*places.length);
+
+  const slice=(Math.PI*2)/places.length;
+  const pointer=(-Math.PI/2);
+  const mid=(targetIndex+.5)*slice;
+
+  let end=pointer-mid;
+  end+= (8+Math.floor(Math.random()*5))*Math.PI*2;
+  while(end<start+2*Math.PI) end+=2*Math.PI;
+
+  const hand=start+(end-start)*.72;
+  const t0=performance.now();
+
+  const ease=t=>1-Math.pow(1-t,3);
+
+  function frame(now){
+    const elapsed=now-t0;
+
+    if(elapsed<=fast){
+      const t=elapsed/fast;
+      wheelAngle=start+(hand-start)*t;
+    }else{
+      const t=Math.min(1,(elapsed-fast)/slow);
+      wheelAngle=hand+(end-hand)*ease(t);
+    }
+
+    drawWheel();
+
+    if(elapsed<total){
+      requestAnimationFrame(frame);
+    }else{
+      wheelAngle=end%(Math.PI*2);
+      drawWheel();
+
+      const idx=pickIndex(wheelAngle);
+      chosenPlace=places[idx];
+      wheelResult.innerHTML=`Result: <b>${chosenPlace.name}</b>`;
+      letsGoBtn.disabled=false;
+
+      /* highlight marker */
+      const m=markerRefs.get(chosenPlace.name);
+      if(m){
+        map.setView([chosenPlace.lat,chosenPlace.lng],16);
+        m.openPopup();
+      }
+
+      spinning=false;
+    }
+  }
+  requestAnimationFrame(frame);
+}
+
+/* =========================
+   DIRECTIONS BUTTON
+========================= */
+
+function openDirections(place){
+  navigator.geolocation.getCurrentPosition(
+    pos=>{
+      const url=`https://www.google.com/maps/dir/?api=1&origin=${pos.coords.latitude},${pos.coords.longitude}&destination=${place.lat},${place.lng}&travelmode=walking`;
+      window.open(url,"_blank");
+    },
+    ()=>{
+      const url=`https://www.google.com/maps/dir/?api=1&destination=${place.lat},${place.lng}&travelmode=walking`;
+      window.open(url,"_blank");
+    }
+  );
+}
+
+/* =========================
+   EVENTS
+========================= */
+
+if (spinBtn) spinBtn.onclick = () => { wheelOverlay.style.display = "flex"; drawWheel(); };
+if (wheelCloseBtn) wheelCloseBtn.onclick = () => (wheelOverlay.style.display = "none");
+wheelSpinBtn.onclick=spinWheel;
+letsGoBtn.onclick=()=>{ if(chosenPlace) openDirections(chosenPlace); };
+
+drawWheel();
 </script>
 </body>
 </html>
