--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@ border:1px solid rgba(212,175,55,.4);
 }
 
 .wheelWrap{border-radius:16px;overflow:hidden}
+
+/* Wheel layout (adds instructions panel) */
+.wheelGrid{display:grid;grid-template-columns:1fr;gap:12px;}
+.wheelCard{border:1px solid rgba(212,175,55,.25);border-radius:14px;padding:12px;background:rgba(255,255,255,.03);}
+.wheelInfo{display:block;}
+@media (min-width:780px){
+  .wheelGrid{grid-template-columns:380px 1fr;align-items:start;}
+}
+@media (max-width:520px){
+  .wheelInfo{display:none;}
+}
 </style>
 </head>
 <body>
@@ -145,19 +156,45 @@ Locate yourself and choose an option.
 <!-- wheel -->
 <div class="overlay" id="wheelOverlay">
 <div class="modal">
-<h3>Spin the wheel 🍺</h3>
+  <h3>Spin the wheel 🍺</h3>
 
-<div class="wheelWrap">
-<canvas id="wheelCanvas" width="320" height="320" style="width:100%"></canvas>
-</div>
+  <div class="wheelGrid">
+    <div class="wheelCard">
+      <div class="wheelWrap">
+        <canvas id="wheelCanvas" width="320" height="320" style="width:100%;height:auto;display:block;"></canvas>
+      </div>
 
-<div class="row">
-<button id="wheelSpinBtn">Spin</button>
-<button id="letsGoBtn" disabled>Let’s go!</button>
-<button id="wheelCloseBtn" class="secondary">Close</button>
-</div>
+      <div class="row" style="margin-top:10px;">
+        <button id="wheelSpinBtn">Spin</button>
+        <button id="letsGoBtn" disabled>Let’s go!</button>
+        <button id="wheelCloseBtn" class="secondary">Close</button>
+      </div>
 
-<div id="wheelResult">Result: —</div>
+      <div id="wheelResult" class="muted" style="margin-top:6px;">Result: —</div>
+    </div>
+
+    <div class="wheelCard wheelInfo">
+      <div style="font-weight:900;margin-bottom:6px;">How it works</div>
+      <div class="muted">
+        1) Spin the wheel with your friends.<br/>
+        2) It lands on a location that sells delicious Guinness.<br/>
+        3) Tap <b>Let’s go!</b> to get directions for your next pint!
+      </div>
+
+      <div style="font-weight:900;margin-top:12px;margin-bottom:6px;">Rules</div>
+      <div class="muted">
+        • One spin per round.<br/>
+        • If the wheel picks somewhere you’ve already been, drink water and spin again 😄<br/>
+        • Bonus rule: loser buys the first Guinness.
+      </div>
+
+      <div style="font-weight:900;margin-top:12px;margin-bottom:6px;">Good to know</div>
+      <div class="muted">
+        • If you don’t allow location, Google Maps still opens directions to the destination.<br/>
+        • You can close this modal by tapping outside it.
+      </div>
+    </div>
+  </div>
 </div>
 </div>
 
@@ -222,14 +259,22 @@ markerRefs.set(p.name,m);
 LOCATE
 ========================= */
 
+const statusEl = document.getElementById("status");
+const locateBtn = document.getElementById("locateBtn");
+const nearestBtn = document.getElementById("nearestBtn");
+const crawlBtn = document.getElementById("crawlBtn");
+const heatBtn = document.getElementById("heatBtn");
+const clearBtn = document.getElementById("clearBtn");
+
 let user=null;
 
-locateBtn.onclick=()=>{
+if (locateBtn) locateBtn.onclick=()=>{
 navigator.geolocation.getCurrentPosition(pos=>{
 user=[pos.coords.latitude,pos.coords.longitude];
 L.circleMarker(user,{radius:8}).addTo(map);
 map.setView(user,15);
 nearestBtn.disabled=false;
+if (statusEl) statusEl.textContent = "Location found. Try Nearest, Pub crawl, Heatmap, or Wheel.";
 });
 };
 
@@ -249,7 +294,11 @@ Math.sin(dLng/2)**2;
 return 2*R*Math.asin(Math.sqrt(x));
 }
 
-nearestBtn.onclick=()=>{
+if (nearestBtn) nearestBtn.onclick=()=>{
+if (!user) {
+  if (statusEl) statusEl.textContent = "Tap ‘Locate me’ first.";
+  return;
+}
 routeLayer.clearLayers();
 
 let best=null;
@@ -268,7 +317,11 @@ map.fitBounds([[user[0],user[1]],[best.p.lat,best.p.lng]]);
 CRAWL
 ========================= */
 
-crawlBtn.onclick=()=>{
+if (crawlBtn) crawlBtn.onclick=()=>{
+if (!user) {
+  if (statusEl) statusEl.textContent = "Tap ‘Locate me’ first.";
+  return;
+}
 crawlLayer.clearLayers();
 
 let list=[...places];
@@ -300,20 +353,27 @@ map.fitBounds(line.getBounds());
 HEATMAP
 ========================= */
 
-heatBtn.onclick=()=>{
-if(heatLayer){map.removeLayer(heatLayer);heatLayer=null;return;}
+if (heatBtn) heatBtn.onclick=()=>{
+if(heatLayer){
+  map.removeLayer(heatLayer);
+  heatLayer=null;
+  if (statusEl) statusEl.textContent = "Heatmap disabled.";
+  return;
+}
 heatLayer=L.heatLayer(places.map(p=>[p.lat,p.lng,.8]),
 {radius:35}).addTo(map);
+if (statusEl) statusEl.textContent = "Heatmap enabled.";
 };
 
 /* =========================
 CLEAR
 ========================= */
 
-clearBtn.onclick=()=>{
+if (clearBtn) clearBtn.onclick=()=>{
 routeLayer.clearLayers();
 crawlLayer.clearLayers();
 if(heatLayer){map.removeLayer(heatLayer);heatLayer=null;}
+if (statusEl) statusEl.textContent = "Cleared routes / modes.";
 };
 
 
